# pybind-test

./: .gitmodules  build_package.sh  install_package.sh  pyproject.toml
module/: CMakeLists.txt
module/cmake_example.egg-info/: PKG-INFO
package/: CMakeLists.txt  post_build.sh  setup.py
package/pybind_sample/: __init__.py
package/pybind_sample.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
package/src/: sample.cpp
scripts/: test.py
stubs/: cmake_example.pyi
stubs/pybind_sample/: __init__.pyi
stubs/pybind_sample/pybind_sample/: __init__.pyi  myspace.pyi
